# obs-loudness-dock

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: clang-format.yml  main.yml
ci/: ci_includes.sh.in  forum-update-info.json
ci/windows/: package-windows.cmd
data/locale/: en-US.ini  ja-JP.ini
example/: get_loudness.py
installer/: installer-Windows.iss.in
packaging/debian/: changelog  control  copyright
src/: config-dialog-table-delegate.cpp  config-dialog-table-delegate.hpp  config-dialog.cpp  config-dialog.hpp  config.hpp  dock-compat.cpp  dock-compat.hpp  loudness-dock.cpp  loudness-dock.hpp  loudness.c  loudness.h  meter.cpp  meter.hpp  plugin-macros.h.in  plugin-main.c  utils.hpp
tools/: dd_loudness_watch.py  requirements.txt
